crash when baking instanced collections with non-mesh objects #119873

Closed
opened 2024-03-25 12:17:50 +01:00 by Dvorakir · 3 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.23

Blender Version
Broken: version: 4.1.0 Release Candidate, branch: blender-v4.1-release, commit date: 2024-03-22 19:59, hash: 64bfe491645f

Short description of error
When a node graph contains instances of a collection that has non-mesh objects in it (e.g. a lamp or an armature), trying to bake with the bake node crashes blender

image

Exact steps for others to reproduce the error
Open the attached blend file and press bake in the bake node

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.23 **Blender Version** Broken: version: 4.1.0 Release Candidate, branch: blender-v4.1-release, commit date: 2024-03-22 19:59, hash: `64bfe491645f` **Short description of error** When a node graph contains instances of a collection that has non-mesh objects in it (e.g. a lamp or an armature), trying to bake with the bake node crashes blender ![image](/attachments/c0478d55-4fa2-4a1e-8fa9-3a8cc30f83cd) **Exact steps for others to reproduce the error** Open the attached blend file and press bake in the bake node
Dvorakir added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-03-25 12:17:51 +01:00
Iliya Katushenock added
Type
Bug
Interest
Geometry Nodes
Interest
Nodes & Physics
and removed
Type
Report
labels 2024-03-25 12:19:42 +01:00

Confirmed

ExceptionCode         : EXCEPTION_ACCESS_VIOLATION

Stack trace:
blender.exe         :0x00007FF620C7FAC0  blender::bke::GeometrySet::has_mesh
blender.exe         :0x00007FF6232FE3A0  blender::bke::bake::serialize_geometry_set
blender.exe         :0x00007FF6232FE3A0  blender::bke::bake::serialize_geometry_set
blender.exe         :0x00007FF6232FE3A0  blender::bke::bake::serialize_geometry_set
blender.exe         :0x00007FF6232FE3A0  blender::bke::bake::serialize_geometry_set
blender.exe         :0x00007FF6232FDE10  blender::bke::bake::serialize_bake_item
blender.exe         :0x00007FF6232FDAD0  blender::bke::bake::serialize_bake
blender.exe         :0x00007FF6219D3B70  blender::ed::object::bake_simulation::bake_geometry_nodes_startjob
Confirmed ``` ExceptionCode : EXCEPTION_ACCESS_VIOLATION Stack trace: blender.exe :0x00007FF620C7FAC0 blender::bke::GeometrySet::has_mesh blender.exe :0x00007FF6232FE3A0 blender::bke::bake::serialize_geometry_set blender.exe :0x00007FF6232FE3A0 blender::bke::bake::serialize_geometry_set blender.exe :0x00007FF6232FE3A0 blender::bke::bake::serialize_geometry_set blender.exe :0x00007FF6232FE3A0 blender::bke::bake::serialize_geometry_set blender.exe :0x00007FF6232FDE10 blender::bke::bake::serialize_bake_item blender.exe :0x00007FF6232FDAD0 blender::bke::bake::serialize_bake blender.exe :0x00007FF6219D3B70 blender::ed::object::bake_simulation::bake_geometry_nodes_startjob ```
Iliya Katushenock added this to the 4.1 milestone 2024-03-25 18:27:32 +01:00
Member

Fairly sure this is caused by 4d0936c7d7.

I found a simple fix. Eventually we will want to be able to maintain object references in the bake. But I don't think that's supported for now.

Fairly sure this is caused by 4d0936c7d74bee32cd50bf63ed2613fa17b9e700. I found a simple fix. Eventually we will want to be able to maintain object references in the bake. But I don't think that's supported for now.
Hans Goudey self-assigned this 2024-03-25 20:11:22 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-25 21:42:23 +01:00
Member

Thanks for the report!

Thanks for the report!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119873
No description provided.